[tool.poetry]
name = "fastdfs-client"
version = "1.2.1"
description = "Python Implement for FastDFS Client"
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/waketzheng/fastdfs-client-python"
repository = "https://github.com/waketzheng/fastdfs-client-python"

[tool.poetry.dependencies]
python = "^3.10"
anyio = ">=4.0.0"


[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.10.1"
pre-commit = "^4.0.1"
trio = "^0.27.0"
httpx = "^0.27.2"

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["E401", "E402", "F403", "F405"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
