[project]
name = "fastdfs-client"
description = "Python Implement for FastDFS Client"
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
dynamic = ["version"]
readme = "README.md"
homepage = "https://github.com/waketzheng/fastdfs-client-python"
repository = "https://github.com/waketzheng/fastdfs-client-python"
dependencies = []
requires-python = ">=3.9"

[tool.poetry]
version = "0"  # Managed by poetry-plugin-version

[project.optional-dependencies]
aio = ["anyio (>=4.0.0,<5.0.0)"]

[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.14.0"
trio = "^0.27.0"
httpx = "^0.27.2"

[tool.mypy]
pretty = true
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["E401", "E402", "F403", "F405"]

[build-system]
requires = ["poetry-plugin-version"]
build-backend = "poetry_plugin_version.api"
